--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,6 +1,7 @@
 {{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
+
 {{block header}}
     <header class="container-fluid background">
       <div class="jumbotron text-center">
@@ -14,10 +15,8 @@
 <h2>
     Here is a canvas
 </h2>
-<div>
-    <canvas style="border: 1px solid black" id="drawingspace"></canvas>
-</div>
-
+<div  style="height: 500; width: 500; border: 1px solid black;" id="canvasDiv"></div>
+<canvas style="height: 500; width: 500; border: 1px solid red;" id="canvas"></canvas>
 {{block right_sidebar}}
 <div class="panel panel-info">
   <div class="panel-heading"><h3 class="panel-title"><a class="btn-block"
