--- a/views/default/index.html
+++ b/views/default/index.html
@@ -11,6 +11,10 @@
         {{pass}}
       </div>
     </header>
+    <script type="text/javascript">$(document).ready(function () { 
+        $('#canvas').sketch();
+    });
+</script>
 {{end}}
 <h2>
     Here is a canvas
