--- a/views/default/index.html
+++ b/views/default/index.html
@@ -16,6 +16,10 @@
 <h2>
     Here is a canvas
 </h2>
+<div class="tools">
+  <input type="color">
+  <a href="#canvas" data-download="png" style="float: right; width: 100px;">Download</a>
+</div>
 <div  style="height: 500; width: 500; border: 1px solid black;" id="canvasDiv"></div>
 <canvas style="height: 500; width: 500; border: 1px solid red;" id="canvas"></canvas>
 {{block right_sidebar}}
