Added ability to save images to image database and view from default page

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -13,6 +13,13 @@
     </header>
 
 {{end}}
+{{=form}}
+<h1>Current Images</h1>
+<ul>
+{{for image in images:}}
+{{=LI(A(image.title, _href=URL("show", args=image.id)))}}
+{{pass}}
+</ul>
 <h2>
     Here is a canvas
 </h2>
