brush and eraser

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -25,6 +25,8 @@
 </h2>
 <div class="tools">
   <input type="color">
+  <a href="#canvas" data-tool="marker">Brush</a>
+  <a href="#canvas" data-tool="eraser">Eraser</a>
   <a href="#canvas" data-download="png" style="float: right; width: 100px;">Download</a>
 </div>
 <div  style="height: 500; width: 500; border: 1px solid black;" id="canvasDiv"></div>
