--- a/views/default/index.html
+++ b/views/default/index.html
@@ -24,10 +24,18 @@
     Here is a canvas
 </h2>
 <div class="tools">
-  <input type="color">
-  <a href="#canvas" data-tool="marker">Brush</a>
+  <input type="color" id="brushColor">
+  <input type="range" id="brushSize" min="1" max="25" onchange="myFunction(this.value);">
+  <a href="#canvas" data-tool="marker" data-size="50">Brush</a>
   <a href="#canvas" data-tool="eraser">Eraser</a>
   <a href="#canvas" data-download="png" style="float: right; width: 100px;">Download</a>
+  <a href="#canvas" data-size="1" size ="6">1px Brush</a>
+  <a href="#canvas" data-size="3" size ="6">3px Brush</a>
+  <a href="#canvas" data-size="5" size ="6">5px Brush</a>
+  <a href="#canvas" data-size="9" size ="6">9px Brush</a>
+  <a href="#canvas" data-size="15" size ="6">15px Brush</a>
+  <a href="#canvas" data-size="30" size ="6">30px Brush</a>
+  <a href="#canvas" data-size="60" size ="6">60px Brush</a> 
 </div>
 <div  style="height: 500; width: 500; border: 1px solid black;" id="canvasDiv"></div>
 <canvas style="height: 500; width: 500; border: 1px solid red;" id="canvas"></canvas>
@@ -48,8 +56,15 @@
   </ul>
 </div>
  <script type="text/javascript">
-        $(document).ready(function () {
-            $('#canvas').sketch();
-        });
+	function myFunction(val){
+		console.log(val);
+		$('#canvas').sketch();
+
+	}
+    $(document).ready(function () {
+	    var x = document.getElementById("brushSize");
+        //$('#canvas').sketch();
+		myFunction(x.value);
+     });
     </script>
 {{end}}
