--- a/views/default/index.html
+++ b/views/default/index.html
@@ -24,8 +24,8 @@
     Here is a canvas
 </h2>
 <div class="tools">
-  <input type="color" id="brushColor">
-  <input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value);">
+  <input type="color" id="brushColor" onchange="changeColor(this.value)">
+  <input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value)">
   <a href="#canvas" data-tool="marker" data-size="5">Brush</a>
   <a href="#canvas" data-tool="eraser">Eraser</a>
   <a href="#canvas" data-download="png" style="float: right; width: 100px;">Download</a>
@@ -53,6 +53,11 @@
 	function changeBrushSize(val){
 		//console.log(val);
 		$('#canvas').sketch().set('size',val);
+
+	}
+	function changeColor(val){
+		//console.log(val);
+		$('#canvas').sketch().set('color',val);
 
 	}
     $(document).ready(function () {
