Created page to show all images. Created page to upload images, requires login. Changed layout.html and menu.py

--- a/static/css/web2py-bootstrap3.css
+++ b/static/css/web2py-bootstrap3.css
@@ -136,6 +136,9 @@ header h1 {
 header .jumbotron {
     background-color: transparent;
 }
+header .bg {
+    background-color: #000;
+}
 .w2p_flash {
     opacity: 0.9!important;
     right: 100px;
