started the project creation forms

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -14,6 +14,7 @@
 
 {{end}}
 <h1>{{=A('Link to Images', _href=URL("showImages"))}}</h1>
+<h1>{{=A('Create New Project', _href=URL("createProject"))}}</h1>
   {{=A('Upload',  _href=URL("create"))}}
 
 <h2>
