--- a/views/layout.html
+++ b/views/layout.html
@@ -23,7 +23,10 @@
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
-
+    <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.min.css')}}"/>
+    <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.structure.min.css')}}"/>
+    <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.theme.min.css')}}"/>
+    <link rel="stylesheet" href="{{=URL('static','css/gridstack.css')}}"/>
     <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
     <!-- All JavaScript at the bottom, except for Modernizr which enables
@@ -119,7 +122,8 @@
     <script src="{{=URL('static','js/bootstrap.min.js')}}"></script>
     <script src="{{=URL('static','js/web2py-bootstrap3.js')}}"></script>
     <script src="{{=URL('static','js/Sketch.js')}}"></script>
-
+    <script src="{{=URL('static','js/jquery-ui.min.js')}}"></script>
+    <script src="{{=URL('static','js/gridstack.js')}}"></script>
     {{block page_js}}{{end page_js}}
     {{if response.google_analytics_id:}}
     <!-- Analytics ==================================== -->
