--- a/views/default/showImages.html
+++ b/views/default/showImages.html
@@ -1,19 +1,22 @@
 {{extend 'layout.html'}}
 <h1> Project {{=project.name}} {{=project.width}} x {{=project.height}}</h1>
-{{=A('Upload',  _href=URL("create",vars=dict(projectId=project.id)))}}
 <br>
 <div style="margin: auto; width: 1300px ;border: 3px solid #73AD21;padding: 10px;">
 {{for w in range(0,project.width):}}
     {{for h in range(0,project.height):}}
-        <div id="draggable5" style="font-size:14; padding: 0px; display:inline-block; width:100px; height:100px; border:1px solid black;">Text({{=w}},{{=h}})</div>
+        {{=A(( DIV('draggable',str(w*project.width+h), _class='test', _id=('draggable'+str(w*project.width+h)),_style="font-size:14; padding: 0px; display:inline-block; width:100px; height:100px; border:1px solid black;")), _href=URL("show",vars=dict(projectId=project.id, num=(w*project.width+h))))}}
     {{pass}}
     <br>
 {{pass}}
+
 </div>
 {{if images:}}
     {{for image in images:}}
         Image: {{=image.title}}
         {{=BR()}}
+        <div style="text-align:center">
+            <a href="{{=URL('show',args=image.id)}}"> <img src="{{=URL('download', args=image.file)}}" style="width:200px"> </a>
+        </div>
         <div style="text-align:center">
             {{=A(IMG(_src=URL('download', args=image.file),_width="200"), _href=URL("show",args=image.id))}}
         </div>
@@ -21,6 +24,7 @@
 {{else:}}
 <h1> No Images</h1>
 {{pass}}
+
 
 <script type="text/javascript">
 $(function () {
