--- a/views/default/showImages.html
+++ b/views/default/showImages.html
@@ -2,9 +2,16 @@
 <h1> Project {{=project.name}} {{=project.width}} x {{=project.height}}</h1>
 <br>
 <div style="margin: auto; width: 1300px ;border: 3px solid #73AD21;padding: 10px;">
+{{index = 0}}
 {{for w in range(0,project.width):}}
     {{for h in range(0,project.height):}}
-        {{=A(( DIV('draggable',str(w*project.width+h), _class='test', _id=('draggable'+str(w*project.width+h)),_style="font-size:14; padding: 0px; display:inline-block; width:100px; height:100px; border:1px solid black;")), _href=URL("show",vars=dict(projectId=project.id, num=(w*project.width+h))))}}
+        {{num=(w*project.width+h)}}
+        {{if index<len(images) and images[index].num == num:}}
+            {{=A((DIV(IMG(_src=URL('download', args=images[index].file),_width='100'), _class='test', _id=('draggable'+str(num)),_style="padding: 0px; display:inline-block; width:100px; height:100px; border:1px solid black;")), _href=URL("show",vars=dict(projectId=project.id, num=num)))}}
+            {{index=index+1}}
+        {{else:}}
+            {{=A((DIV( _class='test', _id=('draggable'+str(num)),_style="padding: 0px; display:inline-block; width:100px; height:100px; border:1px solid black;")), _href=URL("show",vars=dict(projectId=project.id, num=num)))}}
+        {{pass}}
     {{pass}}
     <br>
 {{pass}}
@@ -16,9 +23,6 @@
         {{=BR()}}
         <div style="text-align:center">
             <a href="{{=URL('show',args=image.id)}}"> <img src="{{=URL('download', args=image.file)}}" style="width:200px"> </a>
-        </div>
-        <div style="text-align:center">
-            {{=A(IMG(_src=URL('download', args=image.file),_width="200"), _href=URL("show",args=image.id))}}
         </div>
     {{pass}}
 {{else:}}
