--- a/views/layout.html
+++ b/views/layout.html
@@ -22,12 +22,11 @@
     <!-- include stylesheets -->
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
-    <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.structure.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.theme.min.css')}}"/>
-    <link rel="stylesheet" href="{{=URL('static','css/gridstack.css')}}"/>
     <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
+    <link rel="stylesheet" href="{{=URL('static','css/style.css')}}"/>
     <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
     <!-- All JavaScript at the bottom, except for Modernizr which enables
          HTML5 elements & feature detects -->
@@ -36,7 +35,9 @@
         <script src="{{=URL('static','js/respond-1.4.2.min.js')}}"></script>
         <![endif]-->
     <!-- Favicons -->
-
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" ></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" ></script>
     {{include 'web2py_ajax.html'}} <!-- this includes jquery.js, calendar.js/.css and web2py.js -->
     {{block head}}{{end}}
     {{
@@ -123,7 +124,8 @@
     <script src="{{=URL('static','js/web2py-bootstrap3.js')}}"></script>
     <script src="{{=URL('static','js/Sketch.js')}}"></script>
     <script src="{{=URL('static','js/jquery-ui.min.js')}}"></script>
-    <script src="{{=URL('static','js/gridstack.js')}}"></script>
+    <script src="{{=URL('static','js/packery.pkgd.min.js')}}"></script>
+    <script src="{{=URL('static','js/draggabilly.pkgd.js')}}"></script>
     {{block page_js}}{{end page_js}}
     {{if response.google_analytics_id:}}
     <!-- Analytics ==================================== -->
