--- a/views/default/showImages.html
+++ b/views/default/showImages.html
@@ -7,9 +7,9 @@
     {{for w in range(0,project.width):}}
         {{num=(h*project.height+w)}}
         {{if index<len(images) and images[index].num == num:}}
-            {{=DIV(A(IMG(_src=URL('download', args=images[index].file),_width='100',_height='100'),_href=URL("show",vars=dict(projectId=project.id, num=num))), _class='item emptyimage', _id=('draggable'+str(num)))}}
+            {{=DIV(A(IMG(_src=URL('download', args=images[index].file),_width='100',_height='100', _class='drag'),_href=URL("show",vars=dict(projectId=project.id, num=num))), _class='drop', _id=str(num))}}
         {{else:}}
-            {{=DIV(A(IMG(_src=URL('static','images/blank.png'),_width='100'),_href=URL("show",vars=dict(projectId=project.id, num=num)), _width="100px"), _class='item emptyimage', _id=('draggable'+str(num)))}}
+            {{=DIV(A(IMG(_src=URL('static','images/blank.png'),_width='100'),_href=URL("show",vars=dict(projectId=project.id, num=num)), _class='drag'), _class='drop emptyimage', _id=str(num))}}
         {{pass}}
     {{pass}}
     <br>
@@ -30,7 +30,7 @@
 <script type="text/javascript">
 (function ($) {
     var lastPlace;
-    $("#container div a").draggable({
+    $(".drag").draggable({
         revert: true,
         zIndex: 10,
         //snapMode: "inner",
@@ -38,7 +38,7 @@
             lastPlace = $(this).parent();
         }
     });
-    $("#container div").droppable({
+    $(".drop").droppable({
         drop: function (event, ui) {
             alert('done');
             var dropped = ui.draggable;
