--- a/views/default/show.html
+++ b/views/default/show.html
@@ -16,7 +16,7 @@
 </div>
 {{if image is not None:}}
     <canvas id="canvas" width="800" height="300" style="background: url({{=URL('download', args=image.file)}}) no-repeat center center;"></canvas>
-	<img id ="myImg" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
+	<img id ="myImg" width="800" height = "300" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
 
 {{else:}}
     <canvas id="canvas" width="800" height="300" style="border: 1px black solid"></canvas>
@@ -31,7 +31,7 @@
 		var ctx = canvas.getContext("2d");
 		ctx.globalCompositeOperation = "destination-over";
 		var img = document.getElementById("myImg");
-		ctx.drawImage(img);	
+		ctx.drawImage(img,0,0);	
 		$('#canvas').sketch().download("png");
 	}
 		
