--- a/views/default/show.html
+++ b/views/default/show.html
@@ -15,7 +15,7 @@
 
 </div>
 {{if image is not None:}}
-    <canvas id="canvas" width="800" height="300" style="background: url({{=URL('download', args=image.file)}}) no-repeat center center;"></canvas>
+    <canvas id="canvas" width="800" height="300" style="background: url({{=URL('download', args=image.file)}}) no-repeat 0 0;"></canvas>
 	<img id ="myImg" width="800" height = "300" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
 
 {{else:}}
