added fields to database and fixed background image dimensions. Css is not working on show.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,3 +18,14 @@
 img {
     vertical-align: baseline;
 }
+
+#canvas{
+	width: 800px;
+	height: 800px;
+	background-size: 800px 800px;
+	background-repeat: no-repeat;
+}
+
+.bordered{
+	border: 3px solid black;
+}
