--- a/views/default/show.html
+++ b/views/default/show.html
@@ -15,11 +15,11 @@
 
 </div>
 {{if image is not None:}}
-    <canvas id="canvas" width="800" height="300" style="background: url({{=URL('download', args=image.file)}}) no-repeat 0 0;"></canvas>
-	<img id ="myImg" width="800" height = "300" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
+    <canvas id="canvas" style="background: url({{=URL('download', args=image.file)}});"></canvas>
+	<img id ="myImg" width="800" height = "800" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
 
 {{else:}}
-    <canvas id="canvas" width="800" height="300" style="border: 1px black solid"></canvas>
+    <canvas id="canvas" class = "bordered"></canvas>
 {{pass}}
 
 
@@ -27,12 +27,14 @@
  <script type="text/javascript">
  	
 	function downloadPicture(){
+	
 		var canvas = document.getElementById("canvas");
 		var ctx = canvas.getContext("2d");
 		ctx.globalCompositeOperation = "destination-over";
 		var img = document.getElementById("myImg");
 		ctx.drawImage(img,0,0);	
 		$('#canvas').sketch().download("png");
+		
 	}
 		
 		
