--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,9 +20,7 @@ img {
 }
 
 #canvas{
-	width: 800px;
-	height: 800px;
-	background-size: 800px 800px;
+	background-size: contain;
 	background-repeat: no-repeat;
 }
 
