--- a/views/default/show.html
+++ b/views/default/show.html
@@ -10,16 +10,16 @@
   <input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value)">
   <a href="#canvas" data-tool="marker" data-size="5">Brush</a>
   <a href="#canvas" data-tool="eraser">Eraser</a>
-  <a href="#canvas" data-download="png" style="float: right; width: 100px;">Download</a>
   <button onclick ="downloadPicture()">Click me to download the picture with background!</button>
 
 </div>
 {{if image is not None:}}
     <canvas id="canvas" width= "800" height = "800" style="background-image: url({{=URL('download', args=image.file)}});"></canvas>
-	<img id ="myImg" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
+	<img id ="myImg" width = "800" height = "800" src ="{{=URL('download', args=image.file)}}" style="display:none;" >
 
 {{else:}}
     <canvas id="canvas" width="800" height="800" class = "bordered"></canvas>
+    <img id ="myImg" src ="" style="display:none;" >
 {{pass}}
 
 
@@ -32,7 +32,7 @@
 		var ctx = canvas.getContext("2d");
 		ctx.globalCompositeOperation = "destination-over";
 		var img = document.getElementById("myImg");
-		ctx.drawImage(img,0,0);	
+		ctx.drawImage(img,0,0,800,800);	
 		$('#canvas').sketch().download("png");
 		
 	}
