--- a/views/default/showImages.html
+++ b/views/default/showImages.html
@@ -7,9 +7,9 @@
     {{for w in range(0,project.width):}}
         {{num=(h*project.height+w)}}
         {{if index<len(images) and images[index].num == num:}}
-            {{=DIV(A(IMG(_src=URL('download', args=images[index].file),_width='100',_height='100', _class='drag'),_href=URL("show",vars=dict(projectId=project.id, num=num))), _class='drop', _id=str(num))}}
+            {{=DIV(A(IMG(_src=URL('download', args=images[index].file),_width='100',_height='100' ),_href=URL("show",vars=dict(projectId=project.id, num=num)),_class='drag'), _class='drop', _id=str(num))}}
         {{else:}}
-           {{=DIV(A(IMG(_src=URL('static','images/blank.png'),_width='100'),_href=URL("show",vars=dict(projectId=project.id, num=num)), _class='drag'), _class='drop emptyimage', _id=str(num))}}
+           {{=DIV(A(IMG(_src=URL('static','images/blank.png'),_width='100',_height='100',height='100'),_href=URL("show",vars=dict(projectId=project.id, num=num)), _class='drag'), _class='drop emptyimage', _id=str(num))}}
         {{pass}}
     {{pass}}
     <br>
@@ -27,7 +27,8 @@ $(document).ready(function() {
         snapMode: "inner",
         start: function (event, ui) {
             lastPlace = $(this).parent();
-            lastNum = this.parentNode.id.toString();
+            console.log(this.parentNode);
+            lastNum = this.parentNode.id;
         }
     });
     $(".drop").droppable({
@@ -38,12 +39,11 @@ $(document).ready(function() {
             if ($(droppedOn).children().length > 0) {
                 $(droppedOn).children().detach().prependTo($(lastPlace));
             }
-
             $(dropped).detach().css({
                 top: 0,
                 left: 0
             }).prependTo($(droppedOn));
-            if(lastNum == ""){ lastNum = "0"} //fixes wierd empty string bug
+            //if(lastNum == ""){ lastNum = "0"} //fixes wierd empty string bug
             var data = new Array({{=project.id}},lastNum, this.id);
             $.ajax({
               type: "POST",
