--- a/views/default/show.html
+++ b/views/default/show.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 {{if image is not None:}}
-<h1>Image:{{=count}} {{=image.title}}</h1>
+<h1>Image:{{=count}} Version:{{=image.version}} {{=image.title}}</h1>
 {{else:}}
     <h1>Image not set</h1>
 {{pass}}
@@ -10,7 +10,8 @@
   <input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value)">
   <a href="#canvas" data-tool="marker" data-size="5">Brush</a>
   <a href="#canvas" data-tool="eraser">Eraser</a>
-  <button onclick ="downloadPicture()">Click me to download the picture with background!</button>
+  <button onclick ="downloadPicture()">Download</button>
+  <button onclick ="saves()">Saves</button>
 
 </div>
 {{if image is not None:}}
@@ -25,23 +26,31 @@
 
 
  <script type="text/javascript">
- 	
+    function saves(){
+        console.log('start');
+        //console.log($('#canvas').sketch().save("png"));
+        //console.log('break');
+        //console.log("{{=image.file}}");
+        //console.log('end');
+        var data = new Array({{=projectId}},{{=num}});
+        $.ajax({
+          type: "POST",
+          url: "{{=URL('saveImage')}}",
+          data: {"vars": data}
+        }).done(function( msg ) { });
+    }
 	function downloadPicture(){
-	
 		var canvas = document.getElementById("canvas");
 		var ctx = canvas.getContext("2d");
 		ctx.globalCompositeOperation = "destination-over";
 		var img = document.getElementById("myImg");
-		ctx.drawImage(img,0,0,800,800);	
+		ctx.drawImage(img,0,0,800,800);
 		$('#canvas').sketch().download("png");
-		
 	}
-		
-		
+
     function changeBrushSize(val){
         //console.log(val);
         $('#canvas').sketch().set('size',val);
-
     }
     function changeColor(val){
         //console.log(val);
@@ -50,9 +59,5 @@
     }
     $(document).ready(function () {
         $('#canvas').sketch();// INITIALIZATION DO NOT REMOVE
-		
-		
      });
-	 
-	
 </script>
