can now save, fixed cropping, reset database, need to fix background for fresh saves

--- a/views/default/crop.html
+++ b/views/default/crop.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 <head>
-<script src="../../static/js/jquery.Jcrop.min.js"></script>
-<link rel="stylesheet" href="../../static/css/jquery.Jcrop.css" type="text/css" />
+<script src="{{=URL('static','js/jquery.Jcrop.min.js')}}"> </script>
+<link rel="stylesheet" href="{{=URL('static','css/jquery.Jcrop.css')}}" type="text/css" />
 </head>
 <h1 style="text-align:center">Please crop your image now</h1>
 <div style="text-align:center">
