--- a/views/default/showImages.html
+++ b/views/default/showImages.html
@@ -14,6 +14,7 @@
         {{num=(h*project.height+w)}}
         {{if index<len(images) and images[index].num == num:}}
             {{=DIV(A(IMG(_src=URL('download', args=images[index].file),_width='100',_height='100' ),_href=URL("show",vars=dict(projectId=project.id, num=num)),_class='drag'), _class='drop', _id=str(num))}}
+             {{index=index+1}}
         {{else:}}
            {{=DIV(A(IMG(_src=URL('static','images/blank.png'),_width='100',_height='100',height='100'),_href=URL("show",vars=dict(projectId=project.id, num=num)), _class='drag'), _class='drop emptyimage', _id=str(num))}}
         {{pass}}
