--- a/views/default/show.html
+++ b/views/default/show.html
@@ -10,6 +10,7 @@
   <input type="color" id="brushColor" onchange="changeColor(this.value)">
   <input type="range" value="5"; id="brushSize" min="1" max="25" onchange="changeBrushSize(this.value)">
   <a href="#canvas" data-tool="marker" data-size="5">Brush</a>
+  <a href="#canvas" data-tool="marker" data-size="3000">Bucket</a>
   <a href="#canvas" data-tool="eraser">Eraser</a>
   <button onclick ="downloadPicture()">Download</button>
   <button onclick ="saves()">Saves</button>
